--- a/01_CSS/base/css1.css
+++ b/01_CSS/base/css1.css
@@ -1,5 +1,5 @@
 body{
     font-family: sans-serif;
     font-size: 18px;
-    background-color: rgb(89, 233, 27)
+    background-color: rgb(89, 233, 27);
 }
