--- a/01_CSS/base/css2.css
+++ b/01_CSS/base/css2.css
@@ -1,5 +1,5 @@
 body{
     font-family: italic;
     font-size: 10px;
-    background-color: rgb(148, 173, 58)
+    background-color: rgb(148, 173, 58);
 }
