--- a/02_CSS/base3/style.css
+++ b/02_CSS/base3/style.css
@@ -5,13 +5,13 @@
     width: 15em;
     background-color: blueviolet;
     float:left;
-    height: 100%;
+    height: 94%;
     position: fixed;
 }
 .article{
-    margin: 0em 0em .2em 15em;
-    background-color:rgb(189, 148, 228);
-    height: 313px;
+    margin: 0em 0em -0.9em 15.4em;
+    background-color: rgb(189, 148, 228);
+    height: 351px;
     
 
 }
