--- a/03_CSS/base/style1.css
+++ b/03_CSS/base/style1.css
@@ -2,7 +2,6 @@ ul {
   list-style: none; 
   margin: 0;
   padding: 0;
-  
 }
 
 li{
@@ -18,6 +17,7 @@ li{
 
 .topmenu li:hover .submenu {
     display: block;
+    transition: 4s ease;
 }
 
 a {
@@ -25,7 +25,14 @@ a {
   padding: 14px 27px 14px 18px;
   text-decoration: none;
   outline: none;
-  color: rgb(45, 49, 53); 
+  color: rgb(45, 47, 49); 
+  
+}
+a:hover{background-color:rgb(224, 208, 208);
+  color: aliceblue;
+  border-radius: 10px;
+  transition: all 0.3s;
+
 }
 
 .fa {
@@ -44,13 +51,11 @@ a {
 .submenu>li{
     margin:1px 0px 0px 0px;
     background-color:rgb(184, 168, 168);
-    transition: all 5s;
-    
 }
 
 .topmenu ul li:hover >ul{
     display: inline-block;
-    
+    transition: all 0.3s ease;
 }
 
 @media all and (max-width:700px){
@@ -64,6 +69,7 @@ a {
 
 .topmenu li:hover .submenu {
     display: block;
+    
     }
       
 .fa {
